--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -15,25 +15,35 @@
 #define COMBO_TERM_SLOW 35
 
 // make homerow combos tap-only (so HRMs can be chorded instantaneously)
-#define HRC_TAB    &hml         LA(LCTRL) TAB
-#define HRC_REPEAT &hml_repeat  LS(LCTRL) 0
-#define HRC_LPAR   &hmr_lpar_lt RS(LCTRL) 0
-#define HRC_RPAR   &hmr_rpar_gt LA(LCTRL) 0
+// #define HRC_TAB    &hml         LA(LCTRL) TAB
+// #define HRC_REPEAT &hml_repeat  LS(LCTRL) 0
+// #define HRC_LPAR   &hmr_lpar_lt RS(LCTRL) 0
+// #define HRC_RPAR   &hmr_rpar_gt LA(LCTRL) 0
 
 /* Horizontal combos - left hand */
-// ZMK_COMBO(esc,   &kp ESC,       LT3 LT2,     QWERTY NUMNAV, COMBO_TERM_FAST)
+ZMK_COMBO(esc,   &kp ESC,       LT3 LT2,     QWERTY NUMNAV, COMBO_TERM_FAST)
 // ZMK_COMBO(ret,   &kp RETURN,    LT2 LT1,     DEF NAV NUM, COMBO_TERM_FAST)
 // ZMK_COMBO(mouse, &smart_mouse,  LT3 LT1,     DEF NAV NUM, COMBO_TERM_SLOW)
 
-// ZMK_COMBO(tab,   HRC_TAB,       LM3 LM2,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(tab,   &kp TAB,       LT4 LT3,     QWERTY NUMNAV, COMBO_TERM_SLOW)
 // ZMK_COMBO(repeat,HRC_REPEAT,    LM2 LM1,     DEF NAV NUM, COMBO_TERM_FAST)
 
-// ZMK_COMBO(cut,   &kp LC(X),     LB3 LB1,     DEF NAV NUM, COMBO_TERM_SLOW)
-// ZMK_COMBO(copy,  &kp LC(INS),   LB3 LB2,     DEF NAV NUM, COMBO_TERM_FAST)
-// ZMK_COMBO(paste, &kp LS(INS),   LB2 LB1,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(undo,   &kp LC(Z),     LB4 LB3,     QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(cut,   &kp LC(X),     LB3 LB2,    QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(copy,  &kp LC(C),   LB2 LB1,    QWERTY NUMNAV, COMBO_TERM_FAST)
+ZMK_COMBO(paste, &kp LS(V),   LB1 LB),     QWERTY NUMNAV, COMBO_TERM_FAST)
+
+ZMK_COMBO(LYR1, &to 1,   LH2 LH1,     ALL, COMBO_TERM_FAST)
+ZMK_COMBO(LYR2, &to 2,   LH2 LH0,     ALL, COMBO_TERM_FAST)
+ZMK_COMBO(LYR3, &to 3,   RH2 RH1 RH0,     ALL, COMBO_TERM_FAST)
+ZMK_COMBO(STENO, &tog 4,   LH2 LH1 LH0,     ALL, COMBO_TERM_FAST)
 
 /* Horizontal combos - right hand */
-// ZMK_COMBO(bspc,  &kp BSPC,      RT1 RT2,     DEF NAV NUM, COMBO_TERM_FAST)
+ZMK_COMBO(bspc,  &kp BSPC,      RT3 RT4,     QWERTY NUMNAV, COMBO_TERM_FAST)
+// ZMK_COMBO(lpar,  &kp LC(LEFT),      RM1 RM2,     DEF     NUM, COMBO_TERM_FAST)
+// ZMK_COMBO(rpar,  HRC_RPAR,      RM2 RM3,     DEF     NUM, COMBO_TERM_FAST)
+
+
 // ZMK_COMBO(del,   &kp DEL,       RT2 RT3,     DEF NAV NUM, COMBO_TERM_FAST)
 
 // ZMK_COMBO(lpar,  HRC_LPAR,      RM1 RM2,     DEF     NUM, COMBO_TERM_FAST)
@@ -44,30 +54,41 @@
 // ZMK_COMBO(lbkt,  &kp LBKT,      RB1 RB2,     DEF     NUM, COMBO_TERM_FAST)
 // ZMK_COMBO(rbkt,  &kp RBKT,      RB2 RB3,     DEF     NUM, COMBO_TERM_FAST)
 // ZMK_COMBO(lbrc,  &kp LBRC,      RB1 RB2,         NAV    , COMBO_TERM_FAST)
-ZMK_COMBO(rbrc,  &kp RBRC,      RB2 RB3,         QWERTY    , COMBO_TERM_FAST)
+ZMK_COMBO(rbrc,  &kp RBRC,      RB2 RB3,         QWERTY NUMNAV, COMBO_TERM_FAST)
+ZMK_COMBO(pgdn,  &kp PG_DN,      RM1 RM2 RM3,         QWERTY NUMNAV, COMBO_TERM_FAST)
 
 // ZMK_COMBO(grk,   &sl UC,        RT1 RT3,     DEF NAV NUM, COMBO_TERM_SLOW)
 // ZMK_COMBO(cpgrk, &sls 0,        RT1 RT2 RT3, DEF NAV NUM, COMBO_TERM_SLOW)
 
 /* Vertical combos - left hand */
-// ZMK_COMBO(at,    &kp AT,        LT3 LM3,     DEF NAV NUM, COMBO_TERM_SLOW)
-// ZMK_COMBO(hash,  &kp HASH,      LT2 LM2,     DEF NAV NUM, COMBO_TERM_SLOW)
-// ZMK_COMBO(dllr,  &kp DLLR,      LT1 LM1,     DEF NAV NUM, COMBO_TERM_SLOW)
-// ZMK_COMBO(prcnt, &kp PRCNT,     LT0 LM0,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(excl,    &kp EXCL,        LT4 LM4,     QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(at,    &kp AT,        LT3 LM3,     QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(hash,  &kp HASH,      LT2 LM2,     QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(dllr,  &kp DLLR,      LT1 LM1,     QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(prcnt, &kp PRCNT,     LT0 LM0,     QWERTY NUMNAV, COMBO_TERM_SLOW)
 
-// ZMK_COMBO(grave, &kp GRAVE,     LM3 LB3,     DEF NAV NUM, COMBO_TERM_SLOW)
-// ZMK_COMBO(bslh,  &kp BSLH,      LM2 LB2,     DEF NAV NUM, COMBO_TERM_SLOW)
-// ZMK_COMBO(equal, &kp EQUAL,     LM1 LB1,     DEF NAV NUM, COMBO_TERM_SLOW)
-// ZMK_COMBO(tilde, &kp TILDE,     LM0 LB0,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(grave, &kp GRAVE,     LM4 LB4,     QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(grave, &kp EQUAL,     LM3 LB3,     QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(minus,  &kp MINUS,      LM2 LB2,     QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(bslh, &kp BSLH,     LM1 LB1,     QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(pipe, &kp PIPE,     LM0 LB0,     QWERTY NUMNAV, COMBO_TERM_SLOW)
 
 /* Vertical combos - right hand */
-// ZMK_COMBO(caret, &kp CARET,     RT0 RM0,     DEF NAV NUM, COMBO_TERM_SLOW)
-ZMK_COMBO(plus,  &kp PLUS,      RT1 RM1,     QWERTY NUMNAV, COMBO_TERM_SLOW)
-// ZMK_COMBO(star,  &kp STAR,      RT2 RM2,     DEF NAV NUM, COMBO_TERM_SLOW)
-// ZMK_COMBO(amps,  &kp AMPS,      RT3 RM3,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(caret, &kp CARET,     RT0 RM0,     QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(amps,  &kp AMPS,      RT1 RM1,     QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(star,  &kp STAR,      RT2 RM2,     QWERTY NUMNAV, COMBO_TERM_SLOW)
+// ZMK_COMBO(plus,  &kp PLUS,      RT1 RM1,     QWERTY NUMNAV, COMBO_TERM_SLOW)
 
 // ZMK_COMBO(under, &kp UNDER,     RM0 RB0,     DEF NAV NUM, COMBO_TERM_SLOW)
 // ZMK_COMBO(minus, &kp MINUS,     RM1 RB1,     DEF NAV NUM, COMBO_TERM_SLOW)
 // ZMK_COMBO(fslh,  &kp FSLH,      RM2 RB2,     DEF NAV NUM, COMBO_TERM_SLOW)
 // ZMK_COMBO(pipe,  &kp PIPE,      RM3 RB3,     DEF NAV NUM, COMBO_TERM_SLOW)
+
+/* Diagonal combos - right hand */
+ZMK_COMBO(home,  &kp HOME,      RT2 RM1,         QWERTY NUMNAV, COMBO_TERM_FAST)
+ZMK_COMBO(end,  &kp END,      RT2 RM3,         QWERTY NUMNAV, COMBO_TERM_FAST)
+ZMK_COMBO(pgup,  &kp PG_UP,      RT2 RM1 RM3,         QWERTY NUMNAV, COMBO_TERM_FAST)
+
+/* Horizontal combos - cross hand */
+ZMK_COMBO(esc,   &kp CAPS,       LM1 RM1,     QWERTY, COMBO_TERM_FAST)
 
