--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -31,7 +31,7 @@ ZMK_COMBO(tab,   &kp TAB,       LT4 LT3,     QWERTY NUMNAV, COMBO_TERM_SLOW)
 ZMK_COMBO(undo,   &kp LC(Z),     LB4 LB3,     QWERTY NUMNAV, COMBO_TERM_SLOW)
 ZMK_COMBO(cut,   &kp LC(X),     LB3 LB2,    QWERTY NUMNAV, COMBO_TERM_SLOW)
 ZMK_COMBO(copy,  &kp LC(C),   LB2 LB1,    QWERTY NUMNAV, COMBO_TERM_FAST)
-ZMK_COMBO(paste, &kp LS(V),   LB1 LB),     QWERTY NUMNAV, COMBO_TERM_FAST)
+ZMK_COMBO(paste, &kp LS(V),   LB1 LB0,     QWERTY NUMNAV, COMBO_TERM_FAST)
 
 ZMK_COMBO(LYR1, &to 1,   LH2 LH1,     ALL, COMBO_TERM_FAST)
 ZMK_COMBO(LYR2, &to 2,   LH2 LH0,     ALL, COMBO_TERM_FAST)
