--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -17,8 +17,8 @@
 // make homerow combos tap-only (so HRMs can be chorded instantaneously)
 // #define HRC_TAB    &hml         LA(LCTRL) TAB
 // #define HRC_REPEAT &hml_repeat  LS(LCTRL) 0
-// #define HRC_LPAR   &hmr_lpar_lt RS(LCTRL) 0
-// #define HRC_RPAR   &hmr_rpar_gt LA(LCTRL) 0
+// #define HRC_WRDL   &hmr_word_left RS(LCTRL) 0
+// #define HRC_WRDR   &hmr_word_right LA(LCTRL) 0
 
 /* Horizontal combos - left hand */
 ZMK_COMBO(esc,   &kp ESC,       LT3 LT2,     QWERTY NUMNAV, COMBO_TERM_FAST)
@@ -40,7 +40,8 @@ ZMK_COMBO(STENO, &tog 4,   LH2 LH1 LH0,     ALL, COMBO_TERM_FAST)
 
 /* Horizontal combos - right hand */
 ZMK_COMBO(bspc,  &kp BSPC,      RT3 RT4,     QWERTY NUMNAV, COMBO_TERM_FAST)
-// ZMK_COMBO(lpar,  &kp LC(LEFT),      RM1 RM2,     DEF     NUM, COMBO_TERM_FAST)
+ZMK_COMBO(wrdl,  &kp LC(LEFT),      RM1 RM2,     QWERTY NUMNAV, COMBO_TERM_FAST)
+ZMK_COMBO(wrdr,  &kp LC(RIGHT),      RM2 RM3,     QWERTY NUMNAV, COMBO_TERM_FAST)
 // ZMK_COMBO(rpar,  HRC_RPAR,      RM2 RM3,     DEF     NUM, COMBO_TERM_FAST)
 
 
