--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -55,7 +55,7 @@ ZMK_COMBO(dllr,  &kp DLLR,      LT1 LM1,     QWERTY NUMNAV, COMBO_TERM_SLOW)
 ZMK_COMBO(prcnt, &kp PRCNT,     LT0 LM0,     QWERTY NUMNAV, COMBO_TERM_SLOW)
 
 ZMK_COMBO(grave, &kp GRAVE,    LM4 LB4,     QWERTY NUMNAV, COMBO_TERM_SLOW)
-ZMK_COMBO(grave, &kp EQUAL,    LM3 LB3,     QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(equal, &kp EQUAL,    LM3 LB3,     QWERTY NUMNAV, COMBO_TERM_SLOW)
 ZMK_COMBO(bslh,  &kp BSLH,     LM2 LB2,     QWERTY NUMNAV, COMBO_TERM_SLOW)
 ZMK_COMBO(pipe,  &kp PIPE,     LM1 LB1,     QWERTY NUMNAV, COMBO_TERM_SLOW)
 ZMK_COMBO(minus, &kp MINUS,    LM0 LB0,     QWERTY NUMNAV, COMBO_TERM_SLOW)
