--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -66,9 +66,9 @@ ZMK_COMBO(amps,  &kp AMPS,      RT1 RM1,     QWERTY NUMNAV, COMBO_TERM_SLOW)
 ZMK_COMBO(star,  &kp STAR,      RT2 RM2,     QWERTY NUMNAV, COMBO_TERM_SLOW)
 
 ZMK_COMBO(under, &kp UNDER,     RM0 RB0,     QWERTY NUMNAV, COMBO_TERM_SLOW)
-ZMK_COMBO(lpar,  &kp LPAR,      RM1 RB1,     QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(lpar,  &lpar_lt,      RM1 RB1,     QWERTY NUMNAV, COMBO_TERM_SLOW)
 ZMK_COMBO(fslh,  &kp FSLH,      RM2 RB2,     QWERTY NUMNAV, COMBO_TERM_SLOW)
-ZMK_COMBO(rpar,  &kp RPAR,      RM3 RB3,     QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(rpar,  &rpar_gt,      RM3 RB3,     QWERTY NUMNAV, COMBO_TERM_SLOW)
 
 /* Diagonal combos - right hand */
 ZMK_COMBO(home,  &kp HOME,      RT2 RM1,      QWERTY NUMNAV, COMBO_TERM_SLOW)
