--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -76,4 +76,4 @@ ZMK_COMBO(end,   &kp END,       RT2 RM3,      QWERTY NUMNAV, COMBO_TERM_SLOW)
 ZMK_COMBO(pgup,  &kp PG_UP,     RT2 RM1 RM3,  QWERTY NUMNAV, COMBO_TERM_SLOW)
 
 /* Horizontal combos - cross hand */
-ZMK_COMBO(esc,  &kp CAPS,       LM1 RM1,      QWERTY, COMBO_TERM_FAST)
+ZMK_COMBO(caps,  &kp CAPS,       LM1 RM1,      QWERTY, COMBO_TERM_FAST)
