--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -37,13 +37,14 @@ ZMK_COMBO(LYR4,   &tog 4,         LH2 LH1 LH0,               ALL, COMBO_TERM_FAS
 
 /* Horizontal combos - right hand */
 ZMK_COMBO(bspc,   &kp BSPC,       RT3 RT4,        QWERTY NUMNAV, COMBO_TERM_FAST)
-ZMK_COMBO(del,    &kp DEL,        RT2 RT3,        QWERTY NUMNAV, COMBO_TERM_FAST)
+ZMK_COMBO(del,    &kp DEL,        RT0 RT1,        QWERTY NUMNAV, COMBO_TERM_FAST)
 ZMK_COMBO(wrdl,   &kp LC(LEFT),   RM1 RM2,        QWERTY NUMNAV, COMBO_TERM_FAST)
 ZMK_COMBO(wrdr,   &kp LC(RIGHT),  RM2 RM3,        QWERTY NUMNAV, COMBO_TERM_FAST)
 
 ZMK_COMBO(lbrc,   &kp LBKT,       RB1 RB2,        QWERTY NUMNAV, COMBO_TERM_FAST)
 ZMK_COMBO(rbrc,   &kp RBKT,       RB2 RB3,        QWERTY NUMNAV, COMBO_TERM_FAST)
-ZMK_COMBO(pgdn,   &kp PG_DN,      RM1 RM2 RM3,    QWERTY NUMNAV, COMBO_TERM_FAST)
+ZMK_COMBO(pgup,   &kp PG_UP,      RT1 RT2,        QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(pgdn,   &kp PG_DN,      RT2 RT3,        QWERTY NUMNAV, COMBO_TERM_SLOW)
 
 /* Vertical combos - left hand */
 ZMK_COMBO(excl,   &kp EXCL,      LT4 LM4,          QWERTY NUMNAV, COMBO_TERM_SLOW)
@@ -71,7 +72,6 @@ ZMK_COMBO(rpar,   &rpar_gt,      RM3 RB3,          QWERTY NUMNAV, COMBO_TERM_SLO
 /* Diagonal combos - right hand */
 ZMK_COMBO(home,  &kp HOME,      RT2 RM1,           QWERTY NUMNAV, COMBO_TERM_SLOW)
 ZMK_COMBO(end,   &kp END,       RT2 RM3,           QWERTY NUMNAV, COMBO_TERM_SLOW)
-ZMK_COMBO(pgup,  &kp PG_UP,     RT2 RM1 RM3,       QWERTY NUMNAV, COMBO_TERM_SLOW)
 
 /* Horizontal combos - cross hand */
 ZMK_COMBO(caps,  &kp CAPS,      LM1 RM1,          QWERTY,         COMBO_TERM_FAST)
