--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -63,6 +63,8 @@ ZMK_COMBO(minus,  &kp MINUS,     LM0 LB0,          QWERTY NUMNAV, COMBO_TERM_SLO
 ZMK_COMBO(caret,  &kp CARET,     RT0 RM0,          QWERTY NUMNAV, COMBO_TERM_SLOW)
 ZMK_COMBO(amps,   &kp AMPS,      RT1 RM1,          QWERTY NUMNAV, COMBO_TERM_SLOW)
 ZMK_COMBO(star,   &kp STAR,      RT2 RM2,          QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(swp1,   &swapper1,     RT3 RM3,          QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(swp2,   &swapper2,     RT4 RM4,          QWERTY NUMNAV, COMBO_TERM_SLOW)
 
 ZMK_COMBO(under,  &kp UNDER,     RM0 RB0,          QWERTY NUMNAV, COMBO_TERM_SLOW)
 ZMK_COMBO(lpar,   &lpar_lt,      RM1 RB1,          QWERTY NUMNAV, COMBO_TERM_SLOW)
