--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -37,14 +37,18 @@ ZMK_COMBO(LYR4,   &tog 4,         LH2 LH1 LH0,               ALL, COMBO_TERM_FAS
 
 /* Horizontal combos - right hand */
 ZMK_COMBO(bspc,   &kp BSPC,       RT3 RT4,        QWERTY NUMNAV, COMBO_TERM_FAST)
+ZMK_COMBO(pgup,   &kp PG_UP,      RT1 RT2,        QWERTY NUMNAV, COMBO_TERM_SLOW)
+ZMK_COMBO(pgdn,   &kp PG_DN,      RT2 RT3,        QWERTY NUMNAV, COMBO_TERM_SLOW)
 ZMK_COMBO(del,    &kp DEL,        RT0 RT1,        QWERTY NUMNAV, COMBO_TERM_FAST)
-ZMK_COMBO(wrdl,   &kp LC(LEFT),   RM1 RM2,        QWERTY NUMNAV, COMBO_TERM_FAST)
+
+ZMK_COMBO(ent,    &kp ENT,        RM3 RM4,        QWERTY NUMNAV, COMBO_TERM_FAST)
 ZMK_COMBO(wrdr,   &kp LC(RIGHT),  RM2 RM3,        QWERTY NUMNAV, COMBO_TERM_FAST)
+ZMK_COMBO(wrdl,   &kp LC(LEFT),   RM1 RM2,        QWERTY NUMNAV, COMBO_TERM_FAST)
+ZMK_COMBO(ins,    &kp INS,        RM0 RM1,        QWERTY NUMNAV, COMBO_TERM_FAST)
 
 ZMK_COMBO(lbrc,   &kp LBKT,       RB1 RB2,        QWERTY NUMNAV, COMBO_TERM_FAST)
 ZMK_COMBO(rbrc,   &kp RBKT,       RB2 RB3,        QWERTY NUMNAV, COMBO_TERM_FAST)
-ZMK_COMBO(pgup,   &kp PG_UP,      RT1 RT2,        QWERTY NUMNAV, COMBO_TERM_SLOW)
-ZMK_COMBO(pgdn,   &kp PG_DN,      RT2 RT3,        QWERTY NUMNAV, COMBO_TERM_SLOW)
+
 
 /* Vertical combos - left hand */
 ZMK_COMBO(excl,   &kp EXCL,      LT4 LM4,          QWERTY NUMNAV, COMBO_TERM_SLOW)
