--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -41,7 +41,7 @@ ZMK_COMBO(pgup,   &kp PG_UP,      RT1 RT2,        QWERTY NUMNAV, COMBO_TERM_SLOW
 ZMK_COMBO(pgdn,   &kp PG_DN,      RT2 RT3,        QWERTY NUMNAV, COMBO_TERM_SLOW)
 ZMK_COMBO(del,    &kp DEL,        RT0 RT1,        QWERTY NUMNAV, COMBO_TERM_FAST)
 
-ZMK_COMBO(ent,    &kp ENT,        RM3 RM4,        QWERTY NUMNAV, COMBO_TERM_FAST)
+ZMK_COMBO(ent,    &kp RET,        RM3 RM4,        QWERTY NUMNAV, COMBO_TERM_FAST)
 ZMK_COMBO(wrdr,   &kp LC(RIGHT),  RM2 RM3,        QWERTY NUMNAV, COMBO_TERM_FAST)
 ZMK_COMBO(wrdl,   &kp LC(LEFT),   RM1 RM2,        QWERTY NUMNAV, COMBO_TERM_FAST)
 ZMK_COMBO(ins,    &kp INS,        RM0 RM1,        QWERTY NUMNAV, COMBO_TERM_FAST)
