--- a/config/west.yml
+++ b/config/west.yml
@@ -13,7 +13,7 @@ manifest:
       import: app/west.yml
     - name: zmk_caksoylar
       remote: caksoylar
-      revision: caksoylar/zen-v1+v2  # custom branch name
+      revision: a55f26daef34c58ddc4cb997d2f8450b30f413df
       import: app/west.yml
     - name: zmk_urob
       remote: urob
