--- a/config/west.yml
+++ b/config/west.yml
@@ -7,15 +7,15 @@ manifest:
     - name: urob
       url-base: https://github.com/urob
   projects:
+    //- name: zmk
+     // remote: zmkfirmware
+     // revision: main
+    //  import: app/west.yml
+   // - name: zmk
+     // remote: caksoylar
+   //   revision: a55f26daef34c58ddc4cb997d2f8450b30f413df
+   //   import: app/west.yml
     - name: zmk
-      remote: zmkfirmware
-      revision: main
-      import: app/west.yml
-    - name: zmk
-      remote: caksoylar
-      revision: a55f26daef34c58ddc4cb997d2f8450b30f413df
-      import: app/west.yml
-    - name: zmk_urob
       remote: urob
       revision: main
       import: app/west.yml
