--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -83,7 +83,7 @@ ZMK_COMBO(home,  &kp HOME,      RT2 RM1,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_
 ZMK_COMBO(end,   &kp END,       RT2 RM3,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal combos - cross hand */
-ZMK_COMBO(caps,  &kp CAPS,      LM1 RM1,     DEF       , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(caps,  HRC_CAP,      LM1 RM1,     DEF       , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Function combos - left hand */
 ZMK_COMBO(CF01,  &kp F1,        LH1 LB4,     DEF       , COMBO_TERM_FAST, COMBO_IDLE_FAST)
