--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -31,7 +31,6 @@ ZMK_COMBO(tab,   &kp TAB,       LT4 LT3,     DEF    NUM, COMBO_TERM_SLOW, COMBO_
 ZMK_COMBO(esc,   &kp ESC,       LT3 LT2,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(mouse, &smart_mouse,  LT3 LT1,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
-ZMK_COMBO(cut,   &kp LC(X),     LB3 LB1,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(copy,  &copy_cut,     LB3 LB2,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(paste, &kp LS(INS),   LB2 LB1,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
@@ -83,7 +82,7 @@ ZMK_COMBO(home,  &kp HOME,      RT2 RM1,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_
 ZMK_COMBO(end,   &kp END,       RT2 RM3,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal combos - cross hand */
-ZMK_COMBO(caps,  &kp CAPS,      LM1 RM1,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(caps,  &kp CAPS,      LM1 RM1,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* Function combos - left hand */
 ZMK_COMBO(CF01,  &kp F1,        LH1 LB4,     DEF       , COMBO_TERM_FAST, COMBO_IDLE_FAST)
