--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -35,7 +35,7 @@ ZMK_COMBO(copy,  &copy_cut,     LB3 LB2,     DEF FN NUM, COMBO_TERM_FAST, COMBO_
 ZMK_COMBO(paste, &kp LS(INS),   LB2 LB1,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* Horizontal combos - right hand */
-ZMK_COMBO(bspc,  &bs_del,       RT3 RT4,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(bspc,  &kp BSPC,      RT3 RT4,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(pgdn,  &kp PG_DN,     RT2 RT3,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(pgup,  &kp PG_UP,     RT1 RT2,     DEF FN NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(del,   &kp DEL,       RT0 RT1,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
