--- a/config/corneish_zen.conf
+++ b/config/corneish_zen.conf
@@ -19,4 +19,7 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
 # Clear all bluetooth bonds on start up
-# CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
+
+# Combo settings (mandatory for functionality)
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=20
