--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -31,7 +31,7 @@ ZMK_COMBO(tab,       &kp TAB,           LT4 LT3,     DEF    NUM, COMBO_TERM_SLOW
 ZMK_COMBO(esc,       &kp ESC,           LT3 LT2,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(mouse,     &smart_mouse,      LT1 LT3,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
-ZMK_COMBO(desk_prv,  &DSK_PREV,         LB4 LB3,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(desk_prv,  DSK_PREV,         LB4 LB3,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(copy,      &copy_cut,         LB3 LB2,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(paste,     &kp LS(INS),       LB2 LB1,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
@@ -47,7 +47,7 @@ ZMK_COMBO(wrdr,      HRC_WRDR,          RM3 RM2,     DEF FN NUM, COMBO_TERM_FAST
 ZMK_COMBO(wrdl,      HRC_WRDL,          RM2 RM1,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(ins,       &kp INS,           RM1 RM0,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
-ZMK_COMBO(lbkt,      &kp DSK_NEXT,      RB4 RB3,     DEF    NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(lbkt,      DSK_NEXT,          RB4 RB3,     DEF    NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(rbkt,      &kp RBKT,          RB3 RB2,     DEF    NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(lbkt,      &kp LBKT,          RB2 RB1,     DEF    NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
