--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -21,13 +21,13 @@
 // #define HRC_TAB    &hml         LS(LALT) TAB
 // #define HRC_LPAR   &hmr_lpar_lt RS(LCTRL) 0
 
-#define HRC_CAP    &hml    LS(RSHFT)  CAPS
-#define HRC_RET    &hmr    RA(LGUI)   RET
-#define HRC_WRDL   &hmr    RS(LCTRL)  LC(LEFT)
-#define HRC_WRDR   &hmr    RC(LALT)   LC(RIGHT)
+#define HRC_CAP      &hml    LS(RSHFT)  CAPS
+#define HRC_RET      &hmr    RA(LGUI)   RET
+#define HRC_WRDL     &hmr    RS(LCTRL)  LC(LEFT)
+#define HRC_WRDR     &hmr    RC(LALT)   LC(RIGHT)
 
-#define DSK_PREV    &kp LG(LC(LEFT))             // previous desktop
-#define DSK_NEXT    &hmr LALT LG(LC(RIGHT))      // next     desktop
+#define DSK_PREV     &kp LG(LC(LEFT))       // previous desktop
+#define DSK_NEXT     &kp LG(LC(RIGHT))      // next desktop
 
 /* Horizontal combos - left hand */
 ZMK_COMBO(tab,       &kp TAB,           LT4 LT3,     DEF    NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
