--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -50,7 +50,7 @@ ZMK_COMBO(wrdr,      HRC_WRDR,          RM3 RM2,     DEF FN NUM, COMBO_TERM_FAST
 ZMK_COMBO(wrdl,      HRC_WRDL,          RM2 RM1,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(ins,       &kp INS,           RM1 RM0,     DEF FN NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
-ZMK_COMBO(lbkt,      DSK_NEXT,          RB4 RB3,     DEF    NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(dsknext,   DSK_NEXT,          RB4 RB3,     DEF    NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(rbkt,      &kp RBKT,          RB3 RB2,     DEF    NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(lbkt,      &kp LBKT,          RB2 RB1,     DEF    NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
